# MemcachedGPU

./: .gitignore  Makefile  README.md  version
scripts/: example_setup_env.sh  gnom_load_modules.sh  unload_modules.sh
src/GNoM_km/: Makefile  gpu_km.c  gpu_km.h  gpu_km_shared.h
src/GNoM_nd/: README  SUMS  ixgbe.spec  pci.updates
src/GNoM_nd/src/: Makefile  change_priority  gnom_ixgbe.c  gnom_ixgbe.h  ixgbe.h  ixgbe_api.c  ixgbe_ethtool.c  ixgbe_lib.c  ixgbe_main.c  ixgbe_type.h  kcompat.c  kcompat.h
src/MemcachedGPU/: Makefile.am  MemcachedGPU_ngd_run.sh  MemcachedGPU_run.sh  assoc.c  assoc.h  config.h  config.h.in  config.status  configure  configure.ac  cuda_context_manager.cpp  cuda_context_manager.h  cuda_memory_manager.cpp  cuda_memory_manager.h  cuda_stream_manager.cpp  cuda_stream_manager.h  cuda_stream_wrapper.cpp  cuda_stream_wrapper.h  gpu_common.c  gpu_common.h  items.c  items.h  memcached.c  memcached.h  old_gpu_common.h  slabs.c  thread.c
src/MemcachedGPU/autom4te.cache/: output.0  requests  traces.0  traces.1
src/MemcachedGPU/cuda_kernel_files/: Makefile  background_kernel.cu  cuda_network.cu  gnom_set_assoc_memc.cu  ngd_gnom_set_assoc_memc.cu
src/MemcachedGPU/doc/: Makefile  Makefile.in
